--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "notion-utils": "^6.15.6",
     "p-map": "^5.3.0",
     "p-memoize": "^6.0.1",
-    "posthog-js": "^1.20.2",
+    "posthog-js": "^1.100.0",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-body-classname": "^1.3.1",
     "react-dom": "^18.2.0",
